--- a/apps/api/project.json
+++ b/apps/api/project.json
@@ -53,6 +53,10 @@
           "buildTarget": "api:build:production"
         }
       }
+    },
+    "docker-build": {
+      "dependsOn": ["build"],
+      "command": "docker build -f apps/api/Dockerfile . -t ghcr.io/smnblmrr/test:latest"
     }
   }
 }
