--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@fastify/autoload": "~5.7.1",
     "@fastify/sensible": "~5.2.0",
+    "@prisma/client": "^5.19.1",
     "axios": "^1.6.0",
     "fastify": "~4.13.0",
     "fastify-plugin": "~4.5.0",
@@ -33,6 +34,7 @@
     "jest-environment-node": "^29.7.0",
     "nx": "19.8.0",
     "prettier": "^2.6.2",
+    "prisma": "^5.19.1",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "typescript": "~5.5.2",
